# zrok

./: .goreleaser-darwin.yml  .goreleaser-linux-amd64.yml  .goreleaser-linux-arm64.yml  .goreleaser-linux-armel.yml  .goreleaser-linux-armhf.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  RELEASING.md  SECURITY.md
.github/ISSUE_TEMPLATE/: default.md
.github/workflows/: ci-build.yml  deploy-doc-site.yml  docker.yml  homebrew.yml  mattermost-webhook.yml  node-sdk.yml  promote-downstreams.yml  publish-docker-images.yml  release.yml
cmd/zrok2/: enable.go  invite.go
controller/: verifyEmail.go  version.go
controller/config/: config.go
controller/emailUi/: limitWarning.gohtml  resetPassword.gohtml  verify.gohtml
docker/compose/zrok-instance/: README.md  compose.yml  zrok-controller.Dockerfile  zrok-frontend.Dockerfile
docker/compose/zrok-private-access/: compose.yml
docker/compose/zrok-private-share/: compose.yml
docker/compose/zrok-public-reserved/: compose.yml
docker/images/zrok/: Dockerfile
endpoints/proxy/: browse.html
endpoints/proxyUi/: intersititial.html
etc/: ctrl.yml
etc/caddy/: multiple_upstream.Caddyfile
sdk/golang/examples/http-server/: README.md
sdk/golang/pubsub/: README.md
sdk/nodejs/sdk/: package.json
sdk/python/src/: setup.cfg
ui/: index.html  vite.config.ts
ui/src/: GettingStartedModal.tsx
website/: docusaurus.config.ts
website/docs/concepts/: hosting.md  opensource.md
website/docs/myzrok/: limits.md  upgrading.md
website/src/components/: assets-context.jsx  footer.ts
(+3 files in other folders)
