[metadata]
# "name" property is determined by setup.py based on environment variable
author = Hanzo
author_email = developers@hanzo.ai
description = zrok Python SDK
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hanzoai/zrok
license = Apache 2.0
project_urls =
    Source = https://github.com/hanzoai/zrok
    Tracker = https://github.com/hanzoai/zrok/issues

[options]
# Find packages in the current directory with no special mapping
package_dir =
    = .
packages = find:

[options.packages.find]
# exclude none
where = .

[flake8]
exclude = zrok_api, build
max-line-length = 120

[versioneer]
VCS = git
style = pep440-pre
versionfile_source = zrok/_version.py
versionfile_build = zrok/_version.py
tag_prefix = v
parentdir_prefix = zrok-
